# mdm-glpi-integration

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  PHONE_SUPPORT.md  README.md  REQUIREMENTS.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  test_zoho_connection.py
docs/: api.md  configuration.md  deployment.md  development.md  troubleshooting.md
migrations/: 001_add_phone_support.py
src/mdm_glpi_integration/: __init__.py  cli.py  main.py
src/mdm_glpi_integration/api/: app.py  endpoints.py  middleware.py
src/mdm_glpi_integration/config/: settings.py
src/mdm_glpi_integration/connectors/: glpi_connector.py  mdm_connector.py
src/mdm_glpi_integration/models/: __init__.py  database.py  device.py
src/mdm_glpi_integration/services/: health_checker.py  metrics_service.py  sync_service.py
src/mdm_glpi_integration/utils/: rate_limiter.py
tests/integration/: test_full_integration.py
